# memetropolis-launchpad

backend/: .env.example  Readme.md  package.json  pnpm-lock.yaml  swagger.json
backend/prisma/: schema.prisma
backend/src/: main.module.ts  main.ts
backend/test/: app.e2e-spec.ts
contracts/evm/: .env.example  .gitignore  Makefile  foundry.toml  package.json  pnpm-lock.yaml  remappings.txt
contracts/evm-setpeer-script/: constant.ts  getinfo.ts  oapp-abi.json  package-lock.json  package.json  quote.ts  send.ts  setPeer.ts  tsconfig.json
contracts/script-solana-oapp-setpeer/: 00_print_pda.ts  01_init_oapp.ts  02_set_peer.ts  03_create_global_config.ts  04_create_token.ts  05_get_global_info.ts  06-send.ts  08_quote1.ts  constants.ts  (+4 more)
contracts/solana-pumpfun/programs/pump-fun/: Cargo.toml
contracts/solana-pumpfun/programs/pump-fun/src/: errors.rs  events.rs  lib.rs  msg_codec.rs
contracts/solana-pumpfun/programs/pump-fun/src/instructions/: buy.rs  buy_in_sol.rs  create_token.rs  init_oapp.rs  lz_receive.rs  lz_receive_types.rs  mod.rs  quote.rs  sell.rs  send.rs  set_enforced_options.rs  set_peer.rs
contracts/solana-pumpfun/programs/pump-fun/src/instructions/admin/: create_global_config.rs  mod.rs  transfer_oapp_admin.rs  update_global_config.rs  withdraw.rs
contracts/solana-pumpfun/programs/pump-fun/src/state/: global_config.rs  mod.rs  my_oapp.rs  peer.rs
contracts/solana-pumpfun/programs/pump-fun/src/utils/: cost.rs
frontend/: .env.example  .eslintignore  README.md  next.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
(+706 files in other folders)
