[package]
name = "pump-fun"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "pump_fun"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.29.0", features = ["metadata"] }
oapp = { git = "https://github.com/LayerZero-Labs/LayerZero-v2.git", branch = "main" }
utils = { git = "https://github.com/LayerZero-Labs/LayerZero-v2.git", branch = "main" }